--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
     <div id="chat-page" class="hidden">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>Trabalho de Redes utilizando o protocolo websocket</h2>
+                <h2>Trabalho de Redes utilizando o protocolo websocket.</h2>
             </div>
             <div class="connecting">
                 Conectando...
